# bootcamp_python_revisao_api

./: .gitignore  README.md  exemplo.py  pyproject.toml
src/: controller.py  db.py  main.py  models.py  schema.py
